fix vari
